# jsonl-morphol-to-conll

./: README.md  jsonl-to-conll-morphorogical-to-conll.py  pyproject.toml  transform_I-tag.py
